--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,10 @@
     </div>
     <div id="div-status" style="display:none;width:600px;margin-top:1em;font-size: 1.3em;">
       <p style="font-size: 1.8em;">Curent status for presentations</p>
-      <p>Max "allowed" presentations per student: <span id="tries"></span></p>
+      <p>Max "allowed" presentations per student: <span id="tries" style="font-weight: bold;"></span></p>
+      <p style="font-size: 0.8em;font-style: italic;">
+        Pressing (+) or (-) updates the database imediately no matter the value of Max Allowed Presentations
+      </p>
       <table class="table" style="font-size: 1em;">
         <thead>
           <tr>
